# pixel-police

./: .gitignore  LICENSE  README.md  pyproject.toml
pixel_police/: __init__.py  baseline.py  capturer.py  cli.py  comparator.py  config.py  reporter.py
